# Headquarter

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
code/: CMakeLists.txt
code/client/: CMakeLists.txt  agent.c  agent.h  api.c  arc4.c  arc4.h  auth.c  auth.h  bag.h  broadcast.c  broadcast.h  build.c  build_client.c  character.h  chat.c  chat.h  client.c  client.h  command.c  command.h  dialog.c  dialog.h  effect.c  effect.h  error.c  error.h  event.c  event.h  friend.c  friend.h  game.c  game.h  guild.c  guild.h  hero.c  instance.c  instance.h  inventory.h  iocp.c  iocp.h  (+39 more)
code/client/data/: area_info.data  region_type_to_map_type.data
code/common/: CMakeLists.txt  align.h  array.c  array.h  assert.h  basics.h  build_common.c  common.c  dlfunc.h  endian.h  hash.h  list.h  log.c  log.h  macro.h  noreturn.h  paths.h  process.h  rbtree.c  rbtree.h  socket.h  thread.h  time.h  timer.c  timer.h  uuid.h
code/common/linux/: dlfunc.c  paths.c  thread.c  time.c
code/common/win32/: dlfunc.c  paths.c  process.c  thread.c  time.c  win32.h
code/portal/: CMakeLists.txt  build_portal.c  login.c  login.h  prf.c  prf.h  socket.c  socket.h  ssl.c  ssl.h  stream.c  stream.h  sts.c  sts.h  totp.c  totp.h
data/: authkey  authkey.pub  gw_36618.pub  gw_36618.pub.txt  gw_36630.pub  gw_36630.pub.txt  gw_36633.pub  gw_36633.pub.txt  gw_36642.pub  gw_36642.pub.txt  gw_36645.pub  gw_36645.pub.txt  gw_36649.pub  gw_36649.pub.txt  gw_36652.pub  gw_36652.pub.txt  gw_36659.pub  gw_36659.pub.txt  gw_36670.pub  gw_36670.pub.txt  gw_36678.pub  gw_36678.pub.txt  gw_36688.pub  gw_36688.pub.txt  gw_36692.pub  gw_36692.pub.txt  gw_36706.pub  gw_36706.pub.txt  gw_36711.pub  gw_36711.pub.txt  gw_36716.pub  gw_36716.pub.txt  gw_36731.pub  gw_36731.pub.txt  gw_36733.pub  gw_36733.pub.txt  gw_36737.pub  gw_36737.pub.txt  gw_36740.pub  gw_36740.pub.txt  (+131 more)
docs/: compress.c
filesrv/gcomp/: xentax.cpp
include/: event.h  headquarter.h  str.h  vars.c
include/client/: Headquarter.h  constants.h  event.h
include/client/object/: agent.h  bag.h  friend.h  guild.h  item.h  party.h  plugin.h  quest.h  skill.h  trade.h
include/object/: agent.h  friend.h  item.h  player.h  title.h
mbedtls-2.4.0/visualc/VS2010/: mbedTLS.vcxproj
plugins/: CMakeLists.txt  async.h  gw-helper.c
plugins/chat/: CMakeLists.txt  build_chat.c
plugins/fibers/: fibers.c
plugins/kikou/: kikou.c
plugins/zcoins/: common.c  trader.c  zcoins.c
tests/: CMakeLists.txt  test_array.c  test_event.c  test_kstr.c  test_kstr_hdr.c  test_prf.c  test_sls.c  test_sts.c  test_transform.c
tools/: 2020-01-26_37092_packet_ex.txt  2020-10-22_37079_packet_ex.txt  2020-12-18_37086_packet_ex.txt  2020-12-24_37087_packet_ex.txt  convert_key_to_text.py  decode.c  download.py  dump_area_info.py  dump_key.py  dump_map_infos.py  encode_number.py  generate_dhm.c  inflate.py  main.py  packet.py  packet_ex.py  patch_gw.py  print_gw_exe_file_id.py  process.py  scanner.py  trace-arc4.py  trace-sha256.py  update_binary.py  update_opcode.py  utils.py
vc/: Headquarter.sln  client.vcxproj  common.vcxproj  common.vcxproj.filters
